--- a/styles/scss/_nav.scss
+++ b/styles/scss/_nav.scss
@@ -6,7 +6,11 @@
     align-items: center;
     position: fixed;
     top: 0;
-    z-index: 999;
+    z-index: 99;
+
+    @include mobile{
+        align-items: flex-start;
+    }
 
     &>.container{
         display: flex;
@@ -26,6 +30,12 @@
     .home_link{
         @include ModeratBold;
         font-size: 2em;
+        margin-left: 1rem;
+
+        @include mobile{
+            z-index: 2;
+            margin-top: 1rem;
+        }
     }
 }
 
@@ -37,12 +47,39 @@
     width: 20vw;
     list-style: none;
 
+    @include mobile{
+        width: 100vw;
+        height: 100vh;
+        z-index: 1;
+        position: fixed;
+        top: 0;
+        background-color: $accent;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: center;
+    }
+
     li{
         display: flex;
         align-items: center;
+        height: auto;
+
+        @include mobile{
+            font-size: 2rem;
+            margin-right: 1rem;
+        }
     }
     li:nth-child(2){
         position: relative;
+
+        @include mobile{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            justify-content: center;
+            height: auto;
+        }
+
         &::after{
             content: "";
             width: 24px;
@@ -51,6 +88,10 @@
             background-repeat: no-repeat;
             background-position: center;
             transition: all .5s;
+
+            @include mobile{
+                display: none;
+            }
         }
 
         &:hover::after{
@@ -58,6 +99,7 @@
         }
     }
     li:last-child{
+
         &::after{
             content: "";
             width: 24px;
@@ -65,6 +107,10 @@
             background-image: url(/img/icons/external_link.svg);
             background-repeat: no-repeat;
             background-position: top center;
+
+            @include mobile{
+                display: none;
+            }
         }
     }
 }
@@ -77,6 +123,13 @@
     background: $white;
     border-radius: 5px;
     box-shadow: 0px 10px 15px 0px rgba($color: #000000, $alpha: .25);
+
+    @include mobile{
+        position: static;
+        background: transparent;
+        box-shadow: none;
+        width: 100%;
+    }
 }
 
 .sub_menu{
@@ -84,11 +137,74 @@
     border-radius: 5px;
     transition: all .5s;
 
+    @include mobile{
+        padding: 0;
+        border-radius: 0;
+
+        a{
+            font-size: 1rem;
+            width: 100%;
+            text-align: right;
+            height: 3rem;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+        }
+    }
+
     &:hover{
         background: $accent;
     }
 
     &:after{
         display: none;
+    }
+}
+
+.burger-icon{
+    display:none;
+
+    @include mobile{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        justify-self: flex-end;
+        margin-left: auto;
+        margin-right: 1rem;
+        margin-top: 1rem;
+        width: 35px;
+        height: 35px;
+        z-index: 999;
+        
+        span{
+            display: block;
+            width: 100%;
+            height: 4px;
+            background-color: $black;
+            opacity: 1;
+            transform: translateX(0px) rotate(0deg);
+        }
+    }
+}
+
+//ANIMATION BURGER MENU
+
+.cross{
+    span:first-child{
+        transform: translateX(8px) rotate(45deg);
+        transform-origin: top left;
+        width: 47px;
+        transition: all .5s;
+    }
+    span:nth-child(2){
+        opacity: 0;
+        transition: all .5s;
+    }
+    span:last-child{
+        transform: translateX(8px) rotate(-45deg);
+        transform-origin: bottom left;
+        width: 47px;
+        transition: all .5s;
     }
 }
