--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -17,9 +17,6 @@ body{
     margin: 0 auto;
 }
 
-.hidden{
-    display: none;
-}
 
 .accent{
     color: $accent;
@@ -69,6 +66,10 @@ h1{
     background-color: $gris;
     border-radius: 30px;
     box-shadow: 0 10px 10px 0 rgba($color: #000000, $alpha: .1);
+
+    @include mobile{
+        display: none;
+    }
 }
 
 .top{
@@ -86,10 +87,14 @@ h1{
     transition: all .5s;
     z-index: 999;
 
+    @include mobile{
+        display: none;
+    }
+    
     &:hover{
         transform: scale(1.2);
     }
-
+    
     &::after{
         content: url(/img/icons/chevron.svg);
         transform: scale(1.2) scaleY(-1);
@@ -109,3 +114,7 @@ h1{
 @import '_work.scss';
 @import '_showcase.scss';
 @import '_footer.scss';
+
+.hidden{
+    display: none;
+}
