--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -13,9 +13,9 @@
 
     @include mobile{
         width: 100%;
-        height: 80vh;
+        height: auto;
         margin: 0;
-        margin-top: 10rem;
+        margin-top: 15vh;
         flex-direction: column;
     }
 }
@@ -162,7 +162,7 @@
     margin-top: 10em;
 
     @include mobile{
-        margin: 0 auto;
+        margin: 15vh auto;
         width: 60vw;
     }
 }
@@ -303,6 +303,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            text-align: center;
         }
 
         img{
@@ -666,6 +667,12 @@
 .pro_twist{
     margin: 3em 0;
 
+    @include mobile{
+        li span{
+            margin-left: 2em;
+        }
+    }
+
     .pro_details li a{
         color: $accent;
         text-decoration: none;
@@ -680,6 +687,11 @@
     .pro_details li span::before{
         content: "🡒 ";
         margin-left: 2em;
+
+        @include mobile{
+            content: "";
+            margin: 0;
+        }
     }
 }
 
